--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -151,14 +151,14 @@
         "message": "infobar コンテンツのテンプレート",
         "description": "Options page label: 'template of the infobar content'"
     },
-	"optionBlockMixedContent": {
-		"message": "block mixed content",
-		"description": "Options page label: 'block mixed content'"
-	},
-	"optionSaveOriginalURLs": {
-		"message": "save original URLs of embedded resources",
-		"description": "Options page label: 'save original URLs of embedded resources'"
-	},
+    "optionBlockMixedContent": {
+        "message": "block mixed content",
+        "description": "Options page label: 'block mixed content'"
+    },
+    "optionSaveOriginalURLs": {
+        "message": "save original URLs of embedded resources",
+        "description": "Options page label: 'save original URLs of embedded resources'"
+    },
     "optionIncludeInfobar": {
         "message": "保存されたページに、infobar を含める",
         "description": "Options page label: 'include the infobar in the saved page'"
@@ -287,6 +287,10 @@
         "message": "CSS コンテンツを圧縮する",
         "description": "Options page label: 'compress CSS content'"
     },
+    "optionMoveStylesInHead": {
+        "message": "move in the head element the styles found outside of it",
+        "description": "Options page label: 'move in the head element the styles found outside of it'"
+    },
     "optionRemoveUnusedStyles": {
         "message": "未使用のスタイルを削除する",
         "description": "Options page label: 'remove unused styles'"
@@ -391,14 +395,14 @@
         "message": "ページの非読み込み時に自動保存",
         "description": "Options page label: 'auto-save on page unload'"
     },
-	"optionAutoSaveDiscard": {
-		"message": "auto-save on tab discard",
-		"description": "Options page label: 'auto-save on tab discard'"
-	},
-	"optionAutoSaveRemove": {
-		"message": "auto-save on tab removal",
-		"description": "Options page label: 'auto-save on tab removal'"
-	},
+    "optionAutoSaveDiscard": {
+        "message": "auto-save on tab discard",
+        "description": "Options page label: 'auto-save on tab discard'"
+    },
+    "optionAutoSaveRemove": {
+        "message": "auto-save on tab removal",
+        "description": "Options page label: 'auto-save on tab removal'"
+    },
     "optionAutoSaveDelay": {
         "message": "ページ読み込み後の自動保存待ち時間（秒）",
         "description": "Options page label: 'auto-save waiting delay after page load (s)'"
@@ -440,10 +444,10 @@
         "description": "Options page label: 'save raw page'"
     },
     "optionInsertMetaCSP": {
-		"message": "set content security policy",
-		"description": "Options page label: 'set content security policy'"
-	},
-	"optionsHelpLink": {
+        "message": "set content security policy",
+        "description": "Options page label: 'set content security policy'"
+    },
+    "optionsHelpLink": {
         "message": "ヘルプ",
         "description": "Options help link"
     },
@@ -459,26 +463,26 @@
         "message": "Google Drive に保存",
         "description": "Options page label: 'upload to Google Drive'"
     },
-	"optionSaveToGitHub": {
-		"message": "upload to GitHub",
-		"description": "Options page label: 'upload to GitHub'"
-	},
-	"optionGitHubToken": {
-		"message": "access token",
-		"description": "Options page label: 'access token'"
-	},
-	"optionGitHubUser": {
-		"message": "user name",
-		"description": "Options page label: 'user name'"
-	},
-	"optionGitHubRepository": {
-		"message": "repository name",
-		"description": "Options page label: 'repository name'"
-	},
-	"optionGitHubBranch": {
-		"message": "branch name",
-		"description": "Options page label: 'branch name'"
-	},
+    "optionSaveToGitHub": {
+        "message": "upload to GitHub",
+        "description": "Options page label: 'upload to GitHub'"
+    },
+    "optionGitHubToken": {
+        "message": "access token",
+        "description": "Options page label: 'access token'"
+    },
+    "optionGitHubUser": {
+        "message": "user name",
+        "description": "Options page label: 'user name'"
+    },
+    "optionGitHubRepository": {
+        "message": "repository name",
+        "description": "Options page label: 'repository name'"
+    },
+    "optionGitHubBranch": {
+        "message": "branch name",
+        "description": "Options page label: 'branch name'"
+    },
     "optionSaveCreatedBookmarks": {
         "message": "新しく作成したブックマークのページを保存する",
         "description": "Options page label: 'save the page of a newly created bookmark'"
@@ -488,10 +492,10 @@
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
     "optionAllowedBookmarkFolders": {
-		"message": "allowed folders",
-		"description": "Options page label: 'allowed folders'"
-	},
-	"optionIgnoredBookmarkFolders": {
+        "message": "allowed folders",
+        "description": "Options page label: 'allowed folders'"
+    },
+    "optionIgnoredBookmarkFolders": {
         "message": "ignored folders",
         "description": "Options page label: 'ignored folders'"
     },
