--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -151,14 +151,14 @@
         "message": "szablon zawartości paska informacyjnego",
         "description": "Options page label: 'template of the infobar content'"
     },
-	"optionBlockMixedContent": {
-		"message": "blokuj zawartość mieszaną",
-		"description": "Options page label: 'block mixed content'"
-	},
-	"optionSaveOriginalURLs": {
-		"message": "zapisuj oryginalne adresy URL zasobów osadzonych",
-		"description": "Options page label: 'save original URLs of embedded resources'"
-	},
+    "optionBlockMixedContent": {
+        "message": "blokuj zawartość mieszaną",
+        "description": "Options page label: 'block mixed content'"
+    },
+    "optionSaveOriginalURLs": {
+        "message": "zapisuj oryginalne adresy URL zasobów osadzonych",
+        "description": "Options page label: 'save original URLs of embedded resources'"
+    },
     "optionIncludeInfobar": {
         "message": "dołączaj pasek informacyjny do zapisanej strony",
         "description": "Options page label: 'include the infobar in the saved page'"
@@ -287,6 +287,10 @@
         "message": "kompresuj zawartość CSS",
         "description": "Options page label: 'compress CSS content'"
     },
+    "optionMoveStylesInHead": {
+        "message": "move in the head element the styles found outside of it",
+        "description": "Options page label: 'move in the head element the styles found outside of it'"
+    },
     "optionRemoveUnusedStyles": {
         "message": "usuwaj nieużywane style",
         "description": "Options page label: 'remove unused styles'"
@@ -391,14 +395,14 @@
         "message": "automatycznie zapisuj przy wyładowaniu strony",
         "description": "Options page label: 'auto-save on page unload'"
     },
-	"optionAutoSaveDiscard": {
-		"message": "automatycznie zapisuj przy odrzucaniu karty",
-		"description": "Options page label: 'auto-save on tab discard'"
-	},
-	"optionAutoSaveRemove": {
-		"message": "automatycznie zapisuj przy usuwaniu karty",
-		"description": "Options page label: 'auto-save on tab removal'"
-	},
+    "optionAutoSaveDiscard": {
+        "message": "automatycznie zapisuj przy odrzucaniu karty",
+        "description": "Options page label: 'auto-save on tab discard'"
+    },
+    "optionAutoSaveRemove": {
+        "message": "automatycznie zapisuj przy usuwaniu karty",
+        "description": "Options page label: 'auto-save on tab removal'"
+    },
     "optionAutoSaveDelay": {
         "message": "opóźnienie oczekiwania automatycznego zapisywania po załadowaniu strony (s.)",
         "description": "Options page label: 'auto-save waiting delay after page load (s)'"
@@ -440,10 +444,10 @@
         "description": "Options page label: 'save raw page'"
     },
     "optionInsertMetaCSP": {
-		"message": "ustaw politykę bezpieczeństwa treści",
-		"description": "Options page label: 'set content security policy'"
-	},
-	"optionSaveToFilesystem": {
+        "message": "ustaw politykę bezpieczeństwa treści",
+        "description": "Options page label: 'set content security policy'"
+    },
+    "optionSaveToFilesystem": {
         "message": "zapisuj do systemu plików",
         "description": "Options page label: 'save to filesystem'"
     },
@@ -451,26 +455,26 @@
         "message": "przesyłaj na Dysk Google",
         "description": "Options page label: 'upload to Google Drive'"
     },
-	"optionSaveToGitHub": {
-		"message": "przesyłaj do GitHuba",
-		"description": "Options page label: 'upload to GitHub'"
-	},
-	"optionGitHubToken": {
-		"message": "token dostępu",
-		"description": "Options page label: 'access token'"
-	},
-	"optionGitHubUser": {
-		"message": "nazwa użytkownika",
-		"description": "Options page label: 'user name'"
-	},
-	"optionGitHubRepository": {
-		"message": "nazwa repozytorium",
-		"description": "Options page label: 'repository name'"
-	},
-	"optionGitHubBranch": {
-		"message": "nazwa gałęzi",
-		"description": "Options page label: 'branch name'"
-	},
+    "optionSaveToGitHub": {
+        "message": "przesyłaj do GitHuba",
+        "description": "Options page label: 'upload to GitHub'"
+    },
+    "optionGitHubToken": {
+        "message": "token dostępu",
+        "description": "Options page label: 'access token'"
+    },
+    "optionGitHubUser": {
+        "message": "nazwa użytkownika",
+        "description": "Options page label: 'user name'"
+    },
+    "optionGitHubRepository": {
+        "message": "nazwa repozytorium",
+        "description": "Options page label: 'repository name'"
+    },
+    "optionGitHubBranch": {
+        "message": "nazwa gałęzi",
+        "description": "Options page label: 'branch name'"
+    },
     "optionSaveCreatedBookmarks": {
         "message": "zapisuj stronę nowo utworzonej zakładki",
         "description": "Options page label: 'save the page of a newly created bookmark'"
@@ -480,10 +484,10 @@
         "description": "Options page label: 'link the new bookmark to the saved page'"
     },
     "optionAllowedBookmarkFolders": {
-		"message": "dozwolone foldery",
-		"description": "Options page label: 'allowed folders'"
-	},
-	"optionIgnoredBookmarkFolders": {
+        "message": "dozwolone foldery",
+        "description": "Options page label: 'allowed folders'"
+    },
+    "optionIgnoredBookmarkFolders": {
         "message": "ignorowane foldery",
         "description": "Options page label: 'ignored folders'"
     },
