--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -180,9 +180,17 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "maximale Länge (bytes)",
-        "description": "Options page label: 'max length (bytes)'"
-    },
+		"message": "Maximale Länge",
+		"description": "Options page label: 'max length'"
+	},
+	"optionFilenameMaxLengthBytesUnit": {
+		"message": "Bytes",
+		"description": "Options page label: 'bytes'"
+	},
+	"optionFilenameMaxLengthCharsUnit": {
+		"message": "Zeichen",
+		"description": "Options page label: 'characters'"
+	},
     "optionConfirmFilename": {
         "message": "Dialogfenster \"Sichern als\" zur Bestätigung des Dateinamens öffnen",
         "description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
