--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -180,9 +180,17 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "longueur maximale (octets)",
-        "description": "Options page label: 'max length (bytes)'"
-    },
+		"message": "longueur maximale",
+		"description": "Options page label: 'max length'"
+	},
+	"optionFilenameMaxLengthBytesUnit": {
+		"message": "octets",
+		"description": "Options page label: 'bytes'"
+	},
+	"optionFilenameMaxLengthCharsUnit": {
+		"message": "caractères",
+		"description": "Options page label: 'characters'"
+	},
     "optionConfirmFilename": {
         "message": "ouvrir la boite de dialogue \"Sauver sous\" pour confimer le nom de fichier",
         "description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
