--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -180,9 +180,17 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "lunghezza massima (byte)",
-        "description": "Options page label: 'max length (bytes)'"
-    },
+		"message": "lunghezza massima",
+		"description": "Options page label: 'max length'"
+	},
+	"optionFilenameMaxLengthBytesUnit": {
+		"message": "bytes",
+		"description": "Options page label: 'bytes'"
+	},
+	"optionFilenameMaxLengthCharsUnit": {
+		"message": "caratteri",
+		"description": "Options page label: 'characters'"
+	},
     "optionConfirmFilename": {
         "message": "Apri la finesta di dialogo \"Salva come\" per confermare il nome del file",
         "description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
