--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -180,9 +180,17 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "最大長（バイト）",
-        "description": "Options page label: 'max length (bytes)'"
-    },
+		"message": "最大長",
+		"description": "Options page label: 'max length'"
+	},
+	"optionFilenameMaxLengthBytesUnit": {
+		"message": "バイト",
+		"description": "Options page label: 'bytes'"
+	},
+	"optionFilenameMaxLengthCharsUnit": {
+		"message": "characters",
+		"description": "Options page label: 'characters'"
+	},
     "optionConfirmFilename": {
         "message": "を開く（として保存する：ファイル名を確認するためのダイアログ）",
         "description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
