--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -180,9 +180,17 @@
         "description": "Options page label: 'template'"
     },
     "optionFilenameMaxLength": {
-        "message": "maksymalna długość (bajty)",
-        "description": "Options page label: 'max length (bytes)'"
-    },
+		"message": "maksymalna długość",
+		"description": "Options page label: 'max length'"
+	},
+	"optionFilenameMaxLengthBytesUnit": {
+		"message": "bajty",
+		"description": "Options page label: 'bytes'"
+	},
+	"optionFilenameMaxLengthCharsUnit": {
+		"message": "characters",
+		"description": "Options page label: 'characters'"
+	},
     "optionConfirmFilename": {
         "message": "otwieraj okno \"Zapisz jako\", aby potwierdzić nazwę pliku",
         "description": "Options page label: 'open the \"Save as\" dialog to confirm the file name'"
