--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -188,7 +188,7 @@
 		"description": "Options page label: 'bytes'"
 	},
 	"optionFilenameMaxLengthCharsUnit": {
-		"message": "characters",
+		"message": "znaki",
 		"description": "Options page label: 'characters'"
 	},
     "optionConfirmFilename": {
