--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -188,7 +188,7 @@
 		"description": "Options page label: 'bytes'"
 	},
 	"optionFilenameMaxLengthCharsUnit": {
-		"message": "characters",
+		"message": "символов",
 		"description": "Options page label: 'characters'"
 	},
 	"optionConfirmFilename": {
